crates/parse/src/mcf/grammar/snapshots/mcfunction_parse__mcf__grammar__json__tests__array_empty.snap
---
source: crates/parse/src/mcf/grammar/json.rs
expression: "parse_json(\"[]\")"
---
Group(JsonList) at 0:0 - 0:2 {
    Token(LBracket) `[` at 0:0 - 0:1
    Token(RBracket) `]` at 0:1 - 0:2
}

