crates/parse/src/mcf/grammar/snapshots/mcfunction_parse__mcf__grammar__json__tests__array_nocomma.snap
---
source: crates/parse/src/mcf/grammar/json.rs
expression: "parse_json(r#\"[true\"#)"
---
Group(JsonList) at 0:0 - 0:5 {
    Token(LBracket) `[` at 0:0 - 0:1
    Joined(BooleanTrue) `true` at 0:1 - 0:5
    Error `Expected one of ','` at 0:5 - 0:5
    Error `Expected one of ']'` at 0:5 - 0:5
}

