crates/parse/src/mcf/grammar/snapshots/mcfunction_parse__mcf__grammar__json__tests__boolean_false.snap
---
source: crates/parse/src/mcf/grammar/json.rs
expression: "parse_json(\"false\")"
---
Joined(BooleanFalse) `false` at 0:0 - 0:5

