crates/parse/src/mcf/grammar/snapshots/mcfunction_parse__mcf__grammar__json__tests__boolean_true.snap
---
source: crates/parse/src/mcf/grammar/json.rs
expression: "parse_json(\"true\")"
---
Joined(BooleanTrue) `true` at 0:0 - 0:4

