crates/parse/src/mcf/grammar/snapshots/mcfunction_parse__mcf__grammar__json__tests__null.snap
---
source: crates/parse/src/mcf/grammar/json.rs
expression: "parse_json(\"null\")"
---
Joined(JsonNull) `null` at 0:0 - 0:4

