crates/parse/src/mcf/grammar/snapshots/mcfunction_parse__mcf__grammar__json__tests__object_empty.snap
---
source: crates/parse/src/mcf/grammar/json.rs
expression: "parse_json(\"{}\")"
---
Group(JsonObject) at 0:0 - 0:2 {
    Token(LCurly) `{` at 0:0 - 0:1
    Token(RCurly) `}` at 0:1 - 0:2
}

